--- a/index.html
+++ b/index.html
@@ -67,6 +67,28 @@
         <p>Consequatur perspiciatis cum aut inventore voluptas eaque, distinctio mollitia placeat ducimus officia, ratione eius molestias a dolorum laudantium magni aliquam repudiandae illo, in esse et recusandae! Hic eum perferendis ratione? Tempore dicta incidunt natus necessitatibus debitis repellat recusandae voluptatum sequi.</p>
 
     </section>
+
+    <details>
+        <summary><strong>Lorem ipsum dolor sit amet.</strong></summary>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quis expedita deserunt provident doloribus itaque, incidunt, repellendus debitis vel aut minus eos nesciunt quos labore! Maxime sit sapiente optio eligendi qui asperiores corrupti quaerat a officiis aliquam sunt voluptas eveniet sed, necessitatibus illo in itaque reiciendis earum tenetur? Cum quam alias tenetur aut consequuntur. Culpa nisi veritatis optio ex autem.
+    </details>
+
+    <br>
+
+    <details>
+        <summary><strong>Lorem ipsum dolor sit.</strong></summary>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit unde commodi, laudantium maiores recusandae sed ea rerum, aperiam eveniet facilis possimus quidem. Odio laboriosam vero amet velit, ex repudiandae tempora corrupti, voluptatem beatae, nemo minus fuga dolorum. Neque, magni dicta?
+    </details>
+
+    <footer>
+        <h3>Este é o rodapé</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dicta, debitis sint ullam dolorum tempora aspernatur possimus eligendi perspiciatis maxime officiis nobis reprehenderit dolor. Nihil numquam aut at quidem maxime.</p>
+
+        <address>
+            <strong>Endereço:</strong>
+            Rua Moreira de Godói, 226 - Ipiranga - São Paulo - SP
+        </address>
+    </footer>
     
 </body>
 </html>
