style(index): início da estilização da página principal

--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Semântico</title>
+
+    <!-- CSS externo (arquivo style) -->
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css"> 
+
+    <!-- CSS interno (tag style) -->
+    <!-- <style>
+        body {
+            color:cornflowerblue !important;
+        }
+    </style> -->
 </head>
+
+<!-- CSS inline (atributo style) -->
+<!-- <body style="color:hotpink;"> -->
 <body>
     <header id="topo-pagina">
         <nav>
