fix-style: resolvendo problemas de estilo de parág

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
     <article>
 
         <header>
-            <h1 class="titulo-de-artigo">A heading here</h1>
+            <h1 class="titulo-de-artigo">Este é um artigo com dois parágrafos</h1>
             <p class="autor-do-artigo">Posted by John Doe</p>
+            <p class="paragrafo-de-artigo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores atque nemo doloremque explicabo dicta quasi, necessitatibus totam? Itaque, recusandae culpa.</p>
             <p class="paragrafo-de-artigo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores atque nemo doloremque explicabo dicta quasi, necessitatibus totam? Itaque, recusandae culpa.</p>
         </header>
 
@@ -49,7 +50,37 @@
     <article>
 
         <header>
-            <h1 class="titulo-de-artigo">A heading here</h1>
+            <h1 class="titulo-de-artigo">Agora um artigo com três parágrafos</h1>
+            <p class="autor-do-artigo">Posted by John Doe</p>
+            <p class="paragrafo-de-artigo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores atque nemo doloremque explicabo dicta quasi, necessitatibus totam? Itaque, recusandae culpa.</p>
+            <p class="paragrafo-de-artigo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores atque nemo doloremque explicabo dicta quasi, necessitatibus totam? Itaque, recusandae culpa.</p>
+            <p class="paragrafo-de-artigo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores atque nemo doloremque explicabo dicta quasi, necessitatibus totam? Itaque, recusandae culpa.</p>
+        </header>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos repellat voluptatibus dignissimos nisi beatae aperiam ut error quisquam totam aut.</p>
+        
+    </article>
+
+    <article>
+
+        <header>
+            <h1 class="titulo-de-artigo">Mais um artigo com 5 parágrafos</h1>
+            <p class="autor-do-artigo">Posted by John Doe</p>
+            <p class="paragrafo-de-artigo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores atque nemo doloremque explicabo dicta quasi, necessitatibus totam? Itaque, recusandae culpa.</p>
+            <p class="paragrafo-de-artigo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores atque nemo doloremque explicabo dicta quasi, necessitatibus totam? Itaque, recusandae culpa.</p>
+            <p class="paragrafo-de-artigo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores atque nemo doloremque explicabo dicta quasi, necessitatibus totam? Itaque, recusandae culpa.</p>
+            <p class="paragrafo-de-artigo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores atque nemo doloremque explicabo dicta quasi, necessitatibus totam? Itaque, recusandae culpa.</p>
+            <p class="paragrafo-de-artigo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores atque nemo doloremque explicabo dicta quasi, necessitatibus totam? Itaque, recusandae culpa.</p>
+        </header>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos repellat voluptatibus dignissimos nisi beatae aperiam ut error quisquam totam aut.</p>
+        
+    </article>
+
+    <article>
+
+        <header>
+            <h1 class="titulo-de-artigo">Finalmente, um artigo com um único parágrafo</h1>
             <p class="autor-do-artigo">Posted by John Doe</p>
             <p class="paragrafo-de-artigo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, eius? Ipsum repellendus sunt sit vitae odit. Autem repellendus amet excepturi!</p>
         </header>
